--- a/server/package.json
+++ b/server/package.json
@@ -8,23 +8,14 @@
     "start": "NODE_ENV=development ts-node-dev --rs ./src/index.ts"
   },
   "dependencies": {
-    "@opentelemetry/core": "^0.19.0",
-    "@opentelemetry/instrumentation": "^0.19.0",
-    "@opentelemetry/metrics": "^0.19.0",
-    "@opentelemetry/node": "^0.19.0",
-    "@opentelemetry/plugin-express": "^0.15.0",
-    "@opentelemetry/plugin-http": "^0.18.2",
-    "@opentelemetry/plugin-https": "^0.18.2",
-    "@opentelemetry/tracing": "^0.19.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-cron": "^3.0.0",
-    "opentelemetry-instrumentation-socket.io": "^0.0.0-2021-05-25--13-03",
-    "socket.io": "^4.1.2",
-    "typescript": "^4.3.2"
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.1.6"
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.2"
   }
 }
